--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -102,5 +102,5 @@ html {
 /* google fonts */
 
 .material-symbols-outlined {
-	font-variation-settings: "FILL" 0, "wght" 500, "GRAD" 0, "opsz" 20;
+	font-variation-settings: "FILL" 0, "weight" 500, "GRAD" 0, "opsz" 20;
 }
