--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -71,8 +71,7 @@ html {
 
 /*! Footer END */
 
-/* Home START */
-
+/*? Home START */
 .home img {
 	border: 3px groove #770000;
 	/* max-height: fit-content; */
@@ -87,19 +86,173 @@ html {
 	border: 3px groove #525252;
 	/* max-height: fit-content; */
 }
+/*! Home END */
 
-/* Home END */
-
-/* TestAndAjax START */
-
-#test-and-ajax {
-	height: 100vh;
-	/* max-height: fit-content; */
+/*? SideBar Start*/
+.sidebar {
+	flex-shrink: 0;
+	background-color: #5b5b5b;
+	overflow: hidden;
+	width: 75px;
+	border-right: 1px solid var(--light-gray);
+	display: flex;
+	flex-direction: column;
+	height: calc(100vh - var(--header-height));
+	padding-top: 1rem;
+	align-items: center;
+	justify-content: stretch;
+	transition: width var(--animation-duration) var(--animation-timing-curve);
+	position: sticky;
+	left: 0;
+	top: var(--header-height);
 }
 
-/* TestAndAjax END */
+.sidebar .hidden-sidebar {
+	opacity: 0;
+	width: 0;
+	transition: opacity var(--animation-duration) var(--animation-timing-curve);
+}
 
-/* google fonts */
+.sidebar.open .hidden-sidebar {
+	width: 100%;
+	height: auto;
+	opacity: 1;
+}
+
+.sidebar .top-sidebar {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+.sidebar .channel-logo {
+	display: block;
+	width: 30px;
+	height: 30px;
+	transition: var(--animation-duration) var(--animation-timing-curve);
+}
+
+.sidebar.open .channel-logo {
+	width: 90px;
+	height: 90px;
+}
+
+.sidebar .channel-logo > img {
+	width: 100%;
+	height: 100%;
+}
+
+.middle-sidebar {
+	overflow-y: auto;
+	overflow-x: hidden;
+	flex-grow: 1;
+	margin: 1rem 0;
+}
+
+.middle-sidebar,
+.bottom-sidebar {
+	width: 100%;
+	padding: 0.5rem 6rem 0.5rem 0;
+}
+
+.container {
+	display: flex;
+}
+
+.content {
+	margin: 1rem;
+}
+
+.sidebar-list {
+	margin: 0;
+	padding: 0;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	list-style: none;
+}
+
+.sidebar.open .sidebar-link {
+	justify-content: flex-start;
+}
+
+.sidebar-icon {
+	width: 25px;
+	height: 25px;
+	flex-shrink: 0;
+}
+
+.sidebar-list .hidden-sidebar {
+	margin-left: 1.5rem;
+	white-space: nowrap;
+}
+
+.sidebar-link {
+	display: flex;
+	width: 100%;
+	padding: 0.5rem 0;
+	color: var(--light-gray);
+	text-decoration: none;
+	align-items: center;
+	padding-left: 25px;
+}
+
+.sidebar-list-item {
+	position: relative;
+	width: 100%;
+	fill: var(--light-gray);
+}
+
+.sidebar-list-item.active {
+	fill: var(--accent-color);
+	background-color: var(--lightest-gray);
+}
+
+.sidebar-list-item:hover {
+	background-color: var(--lightest-gray);
+}
+
+.sidebar-list-item.active::before {
+	content: "";
+	background-color: var(--accent-color);
+	height: 100%;
+	left: 0;
+	width: 3px;
+	position: absolute;
+}
+
+.sidebar.open {
+	width: 200px;
+}
+
+.your-channel {
+	color: var(--dark-gray);
+	font-size: 0.75rem;
+	font-weight: bold;
+	margin-bottom: 0.15rem;
+	margin-top: 0.5rem;
+}
+
+.channel-name {
+	color: var(--medium-gray);
+	font-size: 0.75rem;
+}
+
+.sidebar .top-sidebar {
+	height: 30px;
+	transition: height var(--animation-duration) var(--animation-timing-curve);
+}
+
+.sidebar.open .top-sidebar {
+	height: 125px;
+}
+
+.sidebar .top-sidebar .hidden-sidebar {
+	text-align: center;
+	width: 100%;
+}
+
+/*? google fonts */
 
 .material-symbols-outlined {
 	font-variation-settings: "FILL" 0, "weight" 500, "GRAD" 0, "opsz" 20;
@@ -109,7 +262,7 @@ nav {
 	font-family: "Silkscreen";
 }
 
-/* quote-card*/
+/*? quote-card*/
 .quote-card {
 	font-family: "EB Garamond";
 }
