--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,13 +1,22 @@
+:root {
+	--accent-color: rgb(82, 0, 0);
+	--lightest-gray: rgb(244, 244, 244);
+	--light-gray: rgb(144, 144, 144);
+	--medium-gray: rgb(96, 96, 96);
+	--dark-gray: rgb(13, 13, 13);
+	--header-height: 40px;
+	--animation-duration: 200ms;
+	--animation-timing-curve: ease-in-out;
+}
+
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+	margin: 0;
+	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans",
+		"Droid Sans", "Helvetica Neue", sans-serif;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+	font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
 }
